<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20sp"
    android:paddingVertical="30sp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:fontFamily="@font/inter_semi_bold"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:layout_marginVertical="7sp"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_assignees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assignees"
        android:fontFamily="@font/inter_semi_bold"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:layout_marginVertical="7sp"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:fontFamily="@font/inter_semi_bold"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:layout_marginVertical="7sp"
        android:background="@drawable/btn_background_primary"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:fontFamily="@font/inter_semi_bold"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:layout_marginVertical="7sp"
        android:background="@drawable/btn_background_danger"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:fontFamily="@font/inter_semi_bold"
        android:layout_marginTop="30sp"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:background="@drawable/btn_border"
        android:textColor="@color/black"/>
</LinearLayout>