<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200sp"
        android:scaleType="fitXY"
        android:src="@drawable/design_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60sp"
        android:layout_height="130sp"
        android:rotation="180"
        android:scaleType="fitXY"
        android:src="@drawable/ellipse_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0sp"
        android:layout_height="210sp"
        android:layout_marginStart="12sp"
        android:scaleType="fitXY"
        android:src="@drawable/design_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="24sp"
        android:fontFamily="@font/inter_extra_bold"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView1"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        app:cardCornerRadius="8sp"
        app:cardElevation="8sp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:boxStrokeWidth="0sp"
            app:boxStrokeWidthFocused="0sp"
            android:hint="@string/enter_your_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mailEdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="textPhonetic"
                android:paddingStart="12sp"
                android:paddingTop="15sp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView2"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="5sp"
        app:cardCornerRadius="8sp"
        app:cardElevation="8sp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView1">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:boxStrokeWidth="0sp"
            app:boxStrokeWidthFocused="0sp"
            android:hint="@string/enter_your_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="textPersonName"
                android:paddingStart="12sp"
                android:paddingTop="15sp" />

        </com.google.android.material.textfield.TextInputLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView3"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="5sp"
        app:cardCornerRadius="8sp"
        app:cardElevation="8sp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView2">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:boxStrokeWidth="0sp"
            app:boxStrokeWidthFocused="0sp"
            app:passwordToggleEnabled="true"
            android:hint="@string/enter_your_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passEdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="textPassword"
                android:paddingStart="12sp"
                android:paddingTop="15sp" />

        </com.google.android.material.textfield.TextInputLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView4"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="5sp"
        app:cardCornerRadius="8sp"
        app:cardElevation="8sp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView3">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:boxStrokeWidth="0sp"
            app:boxStrokeWidthFocused="0sp"
            app:passwordToggleEnabled="true"
            android:hint="@string/re_enter_your_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verifyPassEdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="textPassword"
                android:paddingStart="12sp"
                android:paddingTop="15sp" />

        </com.google.android.material.textfield.TextInputLayout>


    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/nextBtn"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="12sp"
        android:src="@drawable/btn"
        app:layout_constraintEnd_toEndOf="@id/cardView4"
        app:layout_constraintTop_toBottomOf="@id/cardView4" />

    <TextView
        android:id="@+id/textview32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:fontFamily="@font/inter_regular"
        android:text="Already Registered !!"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewSignIn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/nextBtn" />

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="Sign In"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textview32"
        app:layout_constraintTop_toTopOf="@id/textview32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.76" />
</androidx.constraintlayout.widget.ConstraintLayout>